--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="/assets/css/foundation.min.css">
-  <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="{{ '/assets/css/foundation.min.css' | absolute_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/font-awesome.min.css' | absolute_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/style.css' | absolute_url }}">
 </head>
 <body>
   <div class="slider">
     {% for img in page.images %}
       <div class="slide" style="display: none;">
-        <div class="image" style="background-image: url('{{ img }}')"></div>
+        <div class="image" style="background-image: url('{{ img | absolute_url }}')"></div>
         <span class="helper"></span>
       </div>
     {% endfor %}
@@ -93,9 +93,9 @@
   <div class="footer">
   </div>
 
-  <script src="/assets/js/jquery.js"></script>
-  <script src="/assets/js/foundation.min.js"></script>
-  <script src="/assets/js/code.js"></script>
+  <script src="{{ '/assets/js/jquery.js' | absolute_url }}"></script>
+  <script src="{{ '/assets/js/foundation.min.js' | absolute_url }}"></script>
+  <script src="{{ '/assets/js/code.js' | absolute_url }}"></script>
   <script type="text/javascript">
   $(document).foundation();
   </script>
