--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,9 +14,11 @@ let projs = []
 projs.push("{{p.url}}")
 {% endfor %}
 
-var proj = projs[Math.floor(Math.random() * projs.length)];
-window.location.href = root + proj;
-
+var proj = projs[Math.floor(Math.random() * projs.length)]
+if(root != '/') {
+    proj = root + proj
+}
+window.location.href = '.' + proj
 </script>
 </body>
 </html>
