absolute paths for logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
   <div class="wrapper row collapse single_post">
   <div class="head"><a href="/">
-  <img src="/assets/img/logo.png">
+  <img src="{{ '/assets/img/logo.png' | absolute_url }}">
   </a></div>
 
     <div class="columns small-6 medium-9">
