--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
   </div>
 
   <div class="wrapper row collapse single_post">
-  <div class="head"><a href="/">
+  <div class="head"><a href="{{ '/' | absolute_url }}">
   <img src="{{ '/assets/img/logo.png' | absolute_url }}">
   </a></div>
 
