--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-/*@import url(http://fonts.googleapis.com/css?family=Dosis:300,400);*/
-@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,600);
+@import url(//fonts.googleapis.com/css?family=Open+Sans+Condensed:300,600);
 
 body {
   font-family: 'Open Sans Condensed', sans-serif;
