remove home redirect for email confirm

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ projs.push("{{p.url | absolute_url }}")
 {% endfor %}
 
 var proj = projs[Math.floor(Math.random() * projs.length)]
-window.location.href = proj
+// window.location.href = proj
 </script>
 </body>
 </html>
